<resources>
    <string name="app_name">Repository dan LiveData</string>

    <string name="movies">Movies</string>
    <string name="tv_show">TV Show</string>
    <string name="title">Title</string>
    <string name="release">Release</string>
    <string name="rating">Rating</string>
    <string name="overview">Overview</string>
</resources>